@@ -31,9 +31,10 @@
 #ifndef OPENVDB_UTIL_LOGGING_HAS_BEEN_INCLUDED
 #define OPENVDB_UTIL_LOGGING_HAS_BEEN_INCLUDED
 
+#include <openvdb/version.h>
+
 #ifdef OPENVDB_USE_LOG4CPLUS
 
-#include <openvdb/version.h>
 #include <log4cplus/appender.h>
 #include <log4cplus/configurator.h>
 #include <log4cplus/consoleappender.h>
