@@ -7,8 +7,20 @@
 <B>Version 5.1.0</B> - <I>In development</I>
 
 @par
+New features:
+- Added a @c header_test Makefile target that checks library header files
+  for dependencies on missing or indirectly included headers.
+  <I>[Contributed&nbsp;by&nbsp;Dan&nbsp;Bailey]</I>
+
+@par
 Houdini:
+- Added options to the Clip&nbsp;SOP to expand or shrink the clipping region
+  and, when clipping to a camera frustum, to set the near and far
+  clipping planes.
 - Added output grid naming options to the Points&nbsp;Convert&nbsp;SOP.
+- Added a Keep&nbsp;Original&nbsp;Geometry toggle to the
+  Points&nbsp;Convert&nbsp;SOP and improved the efficiency of point unpacking.
+  <I>[Contributed&nbsp;by&nbsp;Dan&nbsp;Bailey]</I>
 - Added a @b SOP_NodeVDB::evalStdString method that facilitates
   string parameter evaluation in expressions, e.g.,
   <TT>matchGroup(*gdp,&nbsp;evalStdString("group",&nbsp;time))</TT>.
