@@ -3,8 +3,19 @@ OpenVDB Version History
 
 Version 5.1.0 - In development
 
+    New features:
+    - Added a header_test Makefile target that checks library header files
+      for dependencies on missing or indirectly included headers.
+      [Contributed by Dan Bailey]
+
     Houdini:
+    - Added options to the Clip SOP to expand or shrink the clipping region
+      and, when clipping to a camera frustum, to set the near and far
+      clipping planes.
     - Added output grid naming options to the Points Convert SOP.
+    - Added a Keep Original Geometry toggle to the Points Convert SOP
+      and improved the efficiency of point unpacking.
+      [Contributed by Dan Bailey]
     - Added a SOP_NodeVDB::evalStdString() method that facilitates
       string parameter evaluation in expressions, e.g.,
       matchGroup(*gdp, evalStdString("group", time)).
